interface readability fixes

--- a/src/app/mixer/palette/operation/inlet/inlet.component.scss
+++ b/src/app/mixer/palette/operation/inlet/inlet.component.scss
@@ -7,7 +7,7 @@
 
 button.input{
     position: relative;
-	background-color: #00d1b2;
+	background-color: #666666;
 	color: white;
 	border: none;
     display: flex;
