--- a/src/app/mixer/palette/operation/parameter/parameter.component.scss
+++ b/src/app/mixer/palette/operation/parameter/parameter.component.scss
@@ -6,9 +6,11 @@
     text-align: left;
     width: 100%;
     padding:.75em 0em 0em 0.5em;
-
-
+    font-size: 1.5em;
 }
+
+
+
 
 
 .param-name{
@@ -27,6 +29,7 @@
     text-align: left;
     position: relative;
     left: 10px;
+
 }
 
 .param-text{
@@ -34,6 +37,8 @@
     text-align: left;
     padding: 0px 10px;
     overflow: hidden;
+
+
 }
 
 
